# boids_simulation

./: .gitignore  CMakeLists.txt  README.md
src/: glad.c  main.cpp
src/core/: game_loop.cpp  game_loop.h  resource_manager.cpp  resource_manager.h
src/game/: game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h
src/game/object/: boid.cpp  boid.h
src/graphics/: shader_class.cpp  sprite_renderer.cpp  sprite_renderer.h  texture.cpp
src/include/glad/: glad.h
src/levels/: game.lvl  one.lvl  welcome.lvl
src/window/: window.cpp  window.h
